--- a/index.html
+++ b/index.html
@@ -7,42 +7,60 @@
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <div class="container my-5">
-    <h1 class="mb-4">Gizlilik Politikası</h1>
-    <p><strong>Jmath</strong> ("Uygulama", "biz") olarak gizliliğinize önem veriyoruz. Bu Gizlilik Politikası, Uygulamamızı kullandığınızda hangi bilgilerin toplandığını ve bu bilgilerin nasıl kullanıldığını açıklamaktadır. Uygulamamızı indirip kullanarak, bu politikada belirtilen uygulamaları kabul etmiş olursunuz.</p>
+<body class="bg-light">
 
-    <h2 class="mt-5">1. Bizim Tarafımızdan Toplanan Bilgiler</h2>
-    <p>"My Application" uygulaması, kullanıcılardan doğrudan herhangi bir kişisel veri (isim, e-posta, konum vb.) toplamaz veya saklamaz. Uygulamanın çalışması için gerekli olan temel işlevler dışında, kişisel bilgilerinize erişim sağlamayız veya bunları işlemeyiz.</p>
+  <div class="container py-5">
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <h1 class="card-title mb-4 text-center">Gizlilik Politikası</h1>
+        <p class="lead"> <strong>Jmath</strong> ("Uygulama", "biz") olarak gizliliğinize önem veriyoruz. Bu Gizlilik Politikası, Uygulamamızı kullandığınızda hangi bilgilerin toplandığını ve bu bilgilerin nasıl kullanıldığını açıklamaktadır. Uygulamamızı indirip kullanarak, bu politikada belirtilen uygulamaları kabul etmiş olursunuz.</p>
 
-    <h2 class="mt-5">2. Üçüncü Taraf Veri Toplama: Unity Ads</h2>
-    <p>Uygulamamızın geliştirme ve bakım maliyetlerini karşılamak amacıyla, üçüncü taraf bir reklam hizmeti olan Unity Ads'i kullanmaktayız.</p>
+        <div class="mt-5">
+          <h2>1. Bizim Tarafımızdan Toplanan Bilgiler</h2>
+          <p>"Jmath" uygulaması, kullanıcılardan doğrudan herhangi bir kişisel veri (isim, e-posta, konum vb.) toplamaz veya saklamaz. Uygulamanın çalışması için gerekli olan temel işlevler dışında, kişisel bilgilerinize erişim sağlamayız veya bunları işlemeyiz.</p>
+        </div>
 
-    <h3 class="mt-3">Unity Ads'in Topladığı Bilgiler:</h3>
-    <ul>
-      <li><strong>Cihaz Bilgileri:</strong> İşletim sistemi, cihaz modeli gibi teknik bilgiler.</li>
-      <li><strong>Reklam Kimliği (AD_ID):</strong> Google Reklam Kimliği gibi, kişiselleştirilmiş reklamcılık için kullanılan ve sıfırlanabilir bir kimlik.</li>
-      <li><strong>Ağ Bilgileri:</strong> İnternet bağlantısını ve ağ durumunu kontrol etmek için gerekli bilgiler.</li>
-      <li><strong>Reklam Etkileşim Verileri:</strong> Gördüğünüz reklamlar ve bu reklamlarla olan etkileşiminiz gibi anonim veriler.</li>
-    </ul>
+        <div class="mt-4">
+          <h2>2. Üçüncü Taraf Veri Toplama: Unity Ads</h2>
+          <p>Uygulamamızın geliştirme ve bakım maliyetlerini karşılamak amacıyla, üçüncü taraf bir reklam hizmeti olan Unity Ads'i kullanmaktayız.</p>
 
-    <h3 class="mt-3">Verilerin Kullanım Amacı:</h3>
-    <p>Bu veriler, Unity Ads tarafından reklamların gösterilmesi, reklam kampanyalarının etkinliğinin ölçülmesi ve sahtekarlığın önlenmesi gibi amaçlarla kullanılır. Unity, topladığı verilerden kendisi sorumludur ve bu verileri kendi gizlilik politikasına uygun olarak işler. Daha fazla bilgi için Unity Gizlilik Politikası'nı inceleyin.</p>
+          <h3 class="mt-3">Unity Ads'in Topladığı Bilgiler:</h3>
+          <ul class="list-group list-group-flush mb-3">
+            <li class="list-group-item"><strong>Cihaz Bilgileri:</strong> İşletim sistemi, cihaz modeli gibi teknik bilgiler.</li>
+            <li class="list-group-item"><strong>Reklam Kimliği (AD_ID):</strong> Google Reklam Kimliği gibi, kişiselleştirilmiş reklamcılık için kullanılan ve sıfırlanabilir bir kimlik.</li>
+            <li class="list-group-item"><strong>Ağ Bilgileri:</strong> İnternet bağlantısını ve ağ durumunu kontrol etmek için gerekli bilgiler.</li>
+            <li class="list-group-item"><strong>Reklam Etkileşim Verileri:</strong> Gördüğünüz reklamlar ve bu reklamlarla olan etkileşiminiz gibi anonim veriler.</li>
+          </ul>
 
-    <h2 class="mt-5">3. Veri Paylaşımı</h2>
-    <p>Uygulamamız doğrudan veri toplamadığı için, tarafımızca üçüncü şahıslarla paylaşılan herhangi bir kişisel veriniz bulunmamaktadır. Veri toplama ve paylaşım işlemleri, yalnızca yukarıda belirtilen reklam ortağımız olan Unity tarafından kendi politikaları dahilinde gerçekleştirilir.</p>
+          <h3>Verilerin Kullanım Amacı:</h3>
+          <p>Bu veriler, Unity Ads tarafından reklamların gösterilmesi, reklam kampanyalarının etkinliğinin ölçülmesi ve sahtekarlığın önlenmesi gibi amaçlarla kullanılır. Unity, topladığı verilerden kendisi sorumludur ve bu verileri kendi gizlilik politikasına uygun olarak işler. Daha fazla bilgi için Unity Gizlilik Politikası'nı inceleyin.</p>
+        </div>
 
-    <h2 class="mt-5">4. Çocukların Gizliliği</h2>
-    <p>Uygulamamız 13 yaşın altındaki çocukları hedeflememektedir ve onlardan bilerek kişisel bilgi toplamaz. Unity Ads, yaşa uygun reklamlar sunmak için kendi mekanizmalarına sahiptir. Çocuğunuzun yanlışlıkla veri paylaştığını düşünüyorsanız, Unity'nin sağladığı veri yönetimi seçeneklerini incelemenizi öneririz.</p>
+        <div class="mt-4">
+          <h2>3. Veri Paylaşımı</h2>
+          <p>Uygulamamız doğrudan veri toplamadığı için, tarafımızca üçüncü şahıslarla paylaşılan herhangi bir kişisel veriniz bulunmamaktadır. Veri toplama ve paylaşım işlemleri, yalnızca yukarıda belirtilen reklam ortağımız olan Unity tarafından kendi politikaları dahilinde gerçekleştirilir.</p>
+        </div>
 
-    <h2 class="mt-5">5. Gizlilik Politikasındaki Değişiklikler</h2>
-    <p>Bu gizlilik politikasını gelecekte güncelleyebiliriz. Herhangi bir değişiklik yapıldığında, bu sayfada yeni "Son Güncelleme Tarihi" ile yayınlanacaktır. Politikayı düzenli olarak gözden geçirmeniz önemlidir.</p>
+        <div class="mt-4">
+          <h2>4. Çocukların Gizliliği</h2>
+          <p>Uygulamamız 13 yaşın altındaki çocukların verilerini hedeflememektedir ve onlardan bilerek kişisel bilgi toplamaz. Unity Ads, yaşa uygun reklamlar sunmak için kendi mekanizmalarına sahiptir. Çocuğunuzun yanlışlıkla veri paylaştığını düşünüyorsanız, Unity'nin sağladığı veri yönetimi seçeneklerini inceleyin.</p>
+        </div>
 
-    <h2 class="mt-5">6. İletişim</h2>
-    <p>Bu Gizlilik Politikası ile ilgili sorularınız için bizimle iletişime geçebilirsiniz: <a href="mailto:support@myapplication.com">support@myapplication.com</a></p>
+        <div class="mt-4">
+          <h2>5. Gizlilik Politikasındaki Değişiklikler</h2>
+          <p>Bu gizlilik politikasını gelecekte güncelleyebiliriz. Herhangi bir değişiklik yapıldığında, bu sayfada yeni "Son Güncelleme Tarihi" ile yayınlanacaktır. Politikayı düzenli olarak gözden geçirmeniz önemlidir.</p>
+        </div>
+
+        <div class="mt-4 mb-4 text-center">
+          <h2>6. İletişim</h2>
+          <a href="https://mathspeed.xyz/?i=1" target="_blank" class="btn btn-primary btn-lg mt-2">Buradan iletişime geçebilirsiniz</a>
+        </div>
+
+      </div>
+    </div>
   </div>
 
-  <!-- Bootstrap JS (isteğe bağlı, etkileşimler için) -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
