--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,48 +12,48 @@
   <div class="container py-5">
     <div class="card shadow-sm">
       <div class="card-body">
-        <h1 class="card-title mb-4 text-center">Gizlilik Politikası</h1>
-        <p class="lead"> <strong>Jmath</strong> ("Uygulama", "biz") olarak gizliliğinize önem veriyoruz. Bu Gizlilik Politikası, Uygulamamızı kullandığınızda hangi bilgilerin toplandığını ve bu bilgilerin nasıl kullanıldığını açıklamaktadır. Uygulamamızı indirip kullanarak, bu politikada belirtilen uygulamaları kabul etmiş olursunuz.</p>
+        <h1 class="card-title mb-4 text-center">Privacy Policy</h1>
+        <p class="lead"><strong>Jmath</strong> ("App", "we") values your privacy. This Privacy Policy explains what information is collected when you use our app and how that information is used. By downloading and using our app, you agree to the practices described in this policy.</p>
 
         <div class="mt-5">
-          <h2>1. Bizim Tarafımızdan Toplanan Bilgiler</h2>
-          <p>"Jmath" uygulaması, kullanıcılardan doğrudan herhangi bir kişisel veri (isim, e-posta, konum vb.) toplamaz veya saklamaz. Uygulamanın çalışması için gerekli olan temel işlevler dışında, kişisel bilgilerinize erişim sağlamayız veya bunları işlemeyiz.</p>
+          <h2>1. Information Collected by Us</h2>
+          <p>The "Jmath" app does not collect or store any personal data (name, email, location, etc.) directly from users. Except for the essential functions required for the app to work, we do not access or process your personal information.</p>
         </div>
 
         <div class="mt-4">
-          <h2>2. Üçüncü Taraf Veri Toplama: Unity Ads</h2>
-          <p>Uygulamamızın geliştirme ve bakım maliyetlerini karşılamak amacıyla, üçüncü taraf bir reklam hizmeti olan Unity Ads'i kullanmaktayız.</p>
+          <h2>2. Third-Party Data Collection: Unity Ads</h2>
+          <p>To cover the development and maintenance costs of our app, we use a third-party advertising service, Unity Ads.</p>
 
-          <h3 class="mt-3">Unity Ads'in Topladığı Bilgiler:</h3>
+          <h3 class="mt-3">Information Collected by Unity Ads:</h3>
           <ul class="list-group list-group-flush mb-3">
-            <li class="list-group-item"><strong>Cihaz Bilgileri:</strong> İşletim sistemi, cihaz modeli gibi teknik bilgiler.</li>
-            <li class="list-group-item"><strong>Reklam Kimliği (AD_ID):</strong> Google Reklam Kimliği gibi, kişiselleştirilmiş reklamcılık için kullanılan ve sıfırlanabilir bir kimlik.</li>
-            <li class="list-group-item"><strong>Ağ Bilgileri:</strong> İnternet bağlantısını ve ağ durumunu kontrol etmek için gerekli bilgiler.</li>
-            <li class="list-group-item"><strong>Reklam Etkileşim Verileri:</strong> Gördüğünüz reklamlar ve bu reklamlarla olan etkileşiminiz gibi anonim veriler.</li>
+            <li class="list-group-item"><strong>Device Information:</strong> Technical details like operating system and device model.</li>
+            <li class="list-group-item"><strong>Advertising ID (AD_ID):</strong> A resettable identifier used for personalized advertising, such as Google Advertising ID.</li>
+            <li class="list-group-item"><strong>Network Information:</strong> Information necessary to monitor internet connection and network status.</li>
+            <li class="list-group-item"><strong>Ad Interaction Data:</strong> Anonymous data regarding the ads you see and how you interact with them.</li>
           </ul>
 
-          <h3>Verilerin Kullanım Amacı:</h3>
-          <p>Bu veriler, Unity Ads tarafından reklamların gösterilmesi, reklam kampanyalarının etkinliğinin ölçülmesi ve sahtekarlığın önlenmesi gibi amaçlarla kullanılır. Unity, topladığı verilerden kendisi sorumludur ve bu verileri kendi gizlilik politikasına uygun olarak işler. Daha fazla bilgi için Unity Gizlilik Politikası'nı inceleyin.</p>
+          <h3>Purpose of Data Use:</h3>
+          <p>This data is used by Unity Ads to display ads, measure the effectiveness of ad campaigns, and prevent fraud. Unity is responsible for the data it collects and processes it according to its own privacy policies. For more information, please review Unity's Privacy Policy.</p>
         </div>
 
         <div class="mt-4">
-          <h2>3. Veri Paylaşımı</h2>
-          <p>Uygulamamız doğrudan veri toplamadığı için, tarafımızca üçüncü şahıslarla paylaşılan herhangi bir kişisel veriniz bulunmamaktadır. Veri toplama ve paylaşım işlemleri, yalnızca yukarıda belirtilen reklam ortağımız olan Unity tarafından kendi politikaları dahilinde gerçekleştirilir.</p>
+          <h2>3. Data Sharing</h2>
+          <p>Since our app does not collect data directly, there is no personal data shared by us with third parties. Data collection and sharing are performed only by our advertising partner Unity according to their policies.</p>
         </div>
 
         <div class="mt-4">
-          <h2>4. Çocukların Gizliliği</h2>
-          <p>Uygulamamız 13 yaşın altındaki çocukların verilerini hedeflememektedir ve onlardan bilerek kişisel bilgi toplamaz. Unity Ads, yaşa uygun reklamlar sunmak için kendi mekanizmalarına sahiptir. Çocuğunuzun yanlışlıkla veri paylaştığını düşünüyorsanız, Unity'nin sağladığı veri yönetimi seçeneklerini inceleyin.</p>
+          <h2>4. Children's Privacy</h2>
+          <p>Our app does not target children under 13 and does not knowingly collect personal information from them. Unity Ads has mechanisms to serve age-appropriate ads. If you believe your child has inadvertently shared data, please review Unity's data management options.</p>
         </div>
 
         <div class="mt-4">
-          <h2>5. Gizlilik Politikasındaki Değişiklikler</h2>
-          <p>Bu gizlilik politikasını gelecekte güncelleyebiliriz. Herhangi bir değişiklik yapıldığında, bu sayfada yeni "Son Güncelleme Tarihi" ile yayınlanacaktır. Politikayı düzenli olarak gözden geçirmeniz önemlidir.</p>
+          <h2>5. Changes to Privacy Policy</h2>
+          <p>We may update this privacy policy in the future. Any changes will be posted on this page with a new "Last Updated Date." It is important to review the policy regularly.</p>
         </div>
 
         <div class="mt-4 mb-4 text-center">
-          <h2>6. İletişim</h2>
-          <a href="https://mathspeed.xyz/?i=1" target="_blank" class="btn btn-primary btn-lg mt-2">Buradan iletişime geçebilirsiniz</a>
+          <h2>6. Contact</h2>
+          <a href="https://mathspeed.xyz/?i=1" target="_blank" class="btn btn-primary btn-lg mt-2">Contact us here</a>
         </div>
 
       </div>
